# mytoy

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
binder/: environment.yml
mytoy/: __init__.py  toys.py
mytoy/tests/: test_toys.py
