# 

#  https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
[metadata]
name             = mytoy
version          = attr: mytoy.__version__
author           = My Name
author_email     = me@myemail.com
description      = A Python library to make toys
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, toys
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.6,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    mytoy.tests*
